<resources>
    <string name="app_name">Yahtzee ScoreKeeper</string>
    <string name="players">How many players?</string>
    <string name="upper">Upper</string>
    <string name="aces">Aces</string>
    <string name="twos">Twos</string>
    <string name="threes">Threes</string>
    <string name="fours">Fours</string>
    <string name="fives">Fives</string>
    <string name="sixes">Sixes</string>
    <string name="bonus">Bonus</string>
    <string name="total">Total</string>
    <string name="lower">Lower</string>
    <string name="threeOfaKind">3 of a kind</string>
    <string name="fourOfaKind">4 of a kind</string>
    <string name="fullHouse">Full House</string>
    <string name="smallStraight">Small Straight</string>
    <string name="largeStraight">Large Straight</string>
    <string name="yahtzee">Yahtzee</string>
    <string name="chance">Chance</string>
    <string name="grandTotal">Grand Total</string>
    <string name="yahtzeeBonus">Yahtzee Bonus</string>
    <string name="none">0</string>
    <string name="player_2">Player 2</string>
    <string name="player_1">Player 1</string>

    <string name="choose_player">Choose Player</string>
    <string name="enter_score">Enter Score</string>
    <string name="ok">OK</string>
</resources>
